syntax = "proto3";

package com.phoenix.message.proto;

import "task_service/provider/task_config.proto";
option java_multiple_files = true;

message RpcSaveTaskConfigResp {
  int32 code = 1;
  string msg = 2;
  RpcTaskConfigIdModel data = 3;
}

message RpcTaskConfigIdModel {
  int32 id = 1;
}